// src/app/models/operation-type.model.ts

export interface OperationType {
    name: string;
  }
  